@@ -114,7 +114,7 @@ typedef enum {
   PID_PRESET_PLAYBACK = 0x1031,
 
   // E1.37-1 PIDS
-  // Dmx512 setup
+  // DMX512 setup
   PID_DMX_BLOCK_ADDRESS = 0x0140,
   PID_DMX_FAIL_MODE = 0x0141,
   PID_DMX_STARTUP_MODE = 0x0142,
@@ -166,6 +166,22 @@ typedef enum {
   PID_BACKGROUND_STATUS_TYPE = 0x7FD2,
   PID_QUEUED_STATUS_ENDPOINT_COLLECTION = 0x7FD3,
   PID_QUEUED_STATUS_UID_COLLECTION = 0x7FD4,
+
+  // Draft E1.37-2 PIDs - DO NOT USE, values will change
+  PID_LIST_INTERFACES = 0xFFE0,
+  PID_INTERFACE_LABEL = 0xFFE1,
+  PID_INTERFACE_HARDWARE_ADDRESS_TYPE1 = 0xFFE2,
+  PID_IPV4_DHCP_MODE = 0xFFE3,
+  PID_IPV4_ZEROCONF_MODE = 0xFFE4,
+  PID_IPV4_CURRENT_ADDRESS = 0xFFE5,
+  PID_IPV4_STATIC_ADDRESS = 0xFFE6,
+  PID_INTERFACE_RENEW_DHCP = 0xFFE7,
+  PID_INTERFACE_RELEASE_DHCP = 0xFFE8,
+  PID_INTERFACE_APPLY_CONFIGURATION = 0xFFE9,
+  PID_IPV4_DEFAULT_ROUTE = 0xFFEA,
+  PID_DNS_NAME_SERVER = 0xFFEB,
+  PID_DNS_HOSTNAME = 0xFFEC,
+  PID_DNS_DOMAIN_NAME = 0xFFED,
 } rdm_pid;
 
 
@@ -630,6 +646,12 @@ typedef enum {
   MERGEMODE_DMX_ONLY = 0x03,
   MERGEMODE_OTHER = 0xFF,
 } rdm_preset_mergemode;
+
+// Consts for E1.37-2
+static const uint16_t IPV4_UNCONFIGURED = 0x00000000;
+static const uint16_t NO_DEFAULT_ROUTE = 0x00000000;
+
+static const int16_t DNS_NAME_SERVER_MAX_INDEX = 2;
 }  // namespace rdm
 }  // namespace ola
 #endif  // INCLUDE_OLA_RDM_RDMENUMS_H_
