@@ -1,4 +1,4 @@
-X/Y/2013 ola-0.9.0`
+X/Y/2013 ola-0.9.0
  API:
  * Added the ability to specify the priority of the DMX data in the C++ API -
    #266
@@ -14,6 +14,7 @@ X/Y/2013 ola-0.9.0`
  * Log an error if we try and run an RDM test that doesn't exist.
  * Refactor sensor functionality in the software RDM responders and add a load
    average sensor to them and the SPI responder.
+ * Add a class to represent MAC addresses and support for MAC address RDM types
  * Added pretty printing of sensor definition messages.
  * Added a --duration option to the show recorder - #255.
  * Add a warning if the firmware in an Enttec USB Pro widget doesn't support
